--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: 221223_rails _calendar_luna
     databaseName: cal_11
-    user: hararuna
+    user: dpg-cei8t4pa6gdi7rts5q60-a
 
 services:
   - type: web
