--- a/database.yml
+++ b/database.yml
@@ -20,10 +20,19 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV.fetch("DB_HOST") { "localhost" } %>
+  port: <%= ENV.fetch("DB_PORT") { 5432 } %>
+  username: <%= ENV.fetch("DB_USERNAME") { "postgres" } %>
+  password: <%= ENV.fetch("DB_PASSWORD") { "password" } %>
+  
 
 development:
   <<: *default
   database: cal_11_development
+
+test:
+  <<: *default
+  database: cal_11_test
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -79,10 +88,16 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
+#production:
   <<: *default
   database: <%= cal_11 %>
   username: <%= hararuna %>
   password: <%= iaSV00UIb8S3e3JRk8A8pm64JCw2QRLW %>
   host: <%= dpg-cei8t4pa6gdi7rts5q60-a %>
   socket: /var/lib/postgresql/postgresql.sock
+
+production:
+  <<: *default
+  database: cal_11
+  username: <%= ENV["hararuna"] %>
+  password: <%= ENV["iaSV00UIb8S3e3JRk8A8pm64JCw2QRLW"] %>
