--- a/database.yml
+++ b/database.yml
@@ -22,7 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: hararuna
   passward: iaSV00UIb8S3e3JRk8A8pm64JCw2QRLW
-  host: localhost
+  host: dpg-cei8t4pa6gdi7rts5q60-a
   timeout: 5000
 
 
