--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: postgres://hararuna:iaSV00UIb8S3e3JRk8A8pm64JCw2QRLW@dpg-cei8t4pa6gdi7rts5q60-a.singapore-postgres.render.com/cal_11
 
         fromDatabase:
-          name: dpg-cei8t4pa6gdi7rts5q60-a
+          name: soturon_cal_11
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
